<resources>
    <string name="app_name">DBConnectivity</string>
    <string name="titleText">Student Details</string>
    <string name="sRoll">Enter Roll No</string>
    <string name="sName">Enter Name</string>
    <string name="sMarks">Enter Marks</string>
    <string name="btnAdd">Add</string>
    <string name="btnDel">Delete</string>
    <string name="btnModify">Modify</string>
    <string name="btnView">View</string>
    <string name="btnViewAll">View All</string>
    <string name="btnShow">Show</string>
</resources>
